[package]
name = "starkli"
version = "0.1.9"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Starkli (/ˈstɑːrklaɪ/), a blazing fast CLI tool for Starknet powered by starknet-rs"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
auto_impl = "1.1.0"
bigdecimal = "0.4.1"
cairo-starknet-2-0-1 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v2.0.1" }
cairo-starknet-2-1-0 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v2.1.0" }
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive", "env", "string"] }
clap_complete = "4.3.1"
colored = "2.0.0"
colored_json = "3.2.0"
env_logger = "0.10.0"
hex = "0.4.3"
hex-literal = "0.4.1"
log = "0.4.19"
num-bigint = "0.4.3"
num-integer = "0.1.45"
regex = "1.8.4"
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["preserve_order"] }
serde_with = "2.3.3"
shellexpand = "3.1.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "e9bdd7efeae9c76ef62a130ccef3f4355a864797" }
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false, features = ["macros", "rt-multi-thread"] }
url = "2.4.0"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "git2"] }
