[package]
name = "starkli"
version = "0.3.1"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Starkli (/ˈstɑːrklaɪ/), a blazing fast CLI tool for Starknet powered by starknet-rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.68"
auto_impl = "1.1.0"
bigdecimal = "0.4.1"
cairo-starknet-2-4-0 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v2.4.0" }
cairo-starknet-2-5-4 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo", tag = "v2.5.4" }
cairo-starknet-2-6-2 = { package = "cairo-lang-starknet-classes", git = "https://github.com/starkware-libs/cairo", tag = "v2.6.2" }
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive", "env", "string"] }
clap_complete = "4.3.1"
colored = "2.0.0"
colored_json = "3.2.0"
env_logger = "0.10.0"
etcetera = "0.8.0"
flate2 = "1.0.28"
hex = "0.4.3"
hex-literal = "0.4.1"
indexmap = "2.1.0"
log = "0.4.19"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.19"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.8.4"
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["preserve_order"] }
serde_with = "2.3.3"
shellexpand = "3.1.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "db1fa598232f0698d942cc974f481b5d888ac080", features = ["ledger"] }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "db1fa598232f0698d942cc974f481b5d888ac080" }
tempfile = "3.8.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false, features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
url = "2.4.0"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "git2"] }

# We need https://github.com/roynalnaruto/eth-keystore-rs/pull/15 for Android.
#
# Ideally, we should only patch this for Android. However, Cargo does not support target-specific
# patches. So we have to have unconditionally until a new `eth-keystore` release is made.
[patch.crates-io]
eth-keystore = { git = "https://github.com/roynalnaruto/eth-keystore-rs", rev = "85ea8cd5b4dbfcdb3af50e1835540fee83d3b966" }
